--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up JDK 25
         uses: actions/setup-java@v4
         with:
-          distribution: 'openjdk'
+          distribution: 'zulu'
           java-version: '25'
 
       - name: Set up Gradle
