--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -7,6 +7,21 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: pgvector/pgvector:pg17-trixie
+        env:
+          POSTGRES_DB: ai
+          POSTGRES_USER: aiuser
+          POSTGRES_PASSWORD: aipass
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U aiuser -d ai"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     permissions:
       packages: write
       contents: read
