--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '25'
+          cache: gradle
 
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
